--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="map"></div>
     <div class="map-overlay top">
-        <button style="font-size: 2em" onclick="move()">
+        <button class= "button";  onclick="move()">
             Show stops between MIT and Harvard
         </button>
     </div>
